@@ -84,6 +84,7 @@ importFrom(crawl,crwSimulator)
 importFrom(crawl,displayPar)
 importFrom(doParallel,registerDoParallel)
 importFrom(doParallel,stopImplicitCluster)
+importFrom(doRNG,"%dorng%")
 importFrom(dplyr,funs)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,summarise_at)
