@@ -52,6 +52,7 @@
 #' @export
 #' @importFrom doParallel registerDoParallel stopImplicitCluster
 #' @importFrom foreach foreach %dopar%
+#' @importFrom doRNG %dorng%
 #' @importFrom stats median var qt
 #' @importFrom boot logit inv.logit
 #' @importFrom CircStats circ.mean
@@ -149,11 +150,11 @@ MIpool<-function(HMMfits,alpha=0.95,ncores=1,covs=NULL){
   if(nbStates>1) {
     cat("Decoding state sequences and probabilities for each imputation... ")
     registerDoParallel(cores=ncores)
-    im_states <- foreach(i = 1:nsims, .combine = rbind) %dopar% {momentuHMM::viterbi(im[[i]])}
+    im_states <- foreach(i = 1:nsims, .combine = rbind) %dorng% {momentuHMM::viterbi(im[[i]])}
     stopImplicitCluster()
     states <- apply(im_states,2,function(x) which.max(hist(x,breaks=seq(0.5,nbStates+0.5),plot=FALSE)$counts))
     registerDoParallel(cores=ncores)
-    im_stateProbs <- foreach(i = 1:nsims) %dopar% {momentuHMM::stateProbs(im[[i]])}
+    im_stateProbs <- foreach(i = 1:nsims) %dorng% {momentuHMM::stateProbs(im[[i]])}
     stopImplicitCluster()
     cat("DONE\n")
   } else states <- rep(1,nrow(data))
@@ -484,7 +485,7 @@ MIpool<-function(HMMfits,alpha=0.95,ncores=1,covs=NULL){
       # calculate location alpha% error ellipses
       cat("Calculating location",paste0(alpha*100,"%"),"error ellipses... ")
       registerDoParallel(cores=ncores)
-      errorEllipse<-foreach(i = 1:nrow(mh$data)) %dopar% {
+      errorEllipse<-foreach(i = 1:nrow(mh$data)) %dorng% {
         tmp <- cbind(unlist(lapply(im,function(x) x$data$x[i])),unlist(lapply(im,function(x) x$data$y[i])))
         if(length(unique(tmp[,1]))>1 | length(unique(tmp[,2]))>1)
           ellip <- car::dataEllipse(tmp,levels=alpha,draw=FALSE,segments=100)
