@@ -1,6 +1,7 @@
 library(momentuHMM)
 library(sp)
 library(doParallel)
+library(doRNG)
 library(setRNG)
 
 nSims<-30 # number of imputations
@@ -254,7 +255,7 @@ Par0.ind<-getPar0(bestFit,DM=list(step=stepDM.ind,angle=angleDM.ind,omega=omegaD
 
 # fit each track individually to get initial values for full model
 registerDoParallel(cores=ncores) 
-bestFit.all<-foreach(i=1:N) %dopar% {
+bestFit.all<-foreach(i=1:N) %dorng% {
   data.ind<-subset(hsData,ID==i)
   tmpPar1 <- Par0
   tmpPar2 <- getPar0(bestFit)
@@ -331,7 +332,7 @@ miData <- MIfitHMM(crwOut,nSims=nSims,ncores=ncores,covNames=c("sex"),fit=FALSE)
 
 # fit MIfitHMM to each track individually
 registerDoParallel(cores=ncores) 
-miBestFit.all<-foreach(i=1:N) %dopar% {
+miBestFit.all<-foreach(i=1:N) %dorng% {
   data.ind<- lapply(miData$miData,function(x) subset(x,ID==i))
   
   tmpPar1 <- Par0
@@ -418,7 +419,7 @@ miBestFit.all<-foreach(i=1:N) %dopar% {
 stopImplicitCluster()
 
 registerDoParallel(cores=ncores) 
-miSum.all<-foreach(i=1:N) %dopar% {
+miSum.all<-foreach(i=1:N) %dorng% {
   MIpool(miBestFit.all[[i]])
 }
 stopImplicitCluster()
